[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Link.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/School.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Seaweed.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -359.626, 0, 0, 0, 0, 0, -202.548, 31.1595, 0, 0, 0, 0, -210.815, 13398.6, 0, 0, 0, 0, -363.759, 13398.6, 0, 0, 0, 0, -359.626, 0 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 2056, 16, 0, 0, 0, 0, 1448, 16, 0, 0, 0, 0, 1520, 3432, 0, 0, 0, 0, 2048, 3440, 0, 0, 0, 0, 2056, 16 )
}

[sub_resource type="Theme" id=7]
default_font = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
school_scene = ExtResource( 6 )

[node name="Background" parent="." instance=ExtResource( 5 )]
position = Vector2( 788, 0 )
scale = Vector2( 5.39567, 2.82496 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 500, 336 )
z_index = 1

[node name="LeftSchoolPath" type="Path2D" parent="."]
position = Vector2( -179, 2 )
scale = Vector2( 1.93535, 0.256743 )
curve = SubResource( 5 )

[node name="SchoolSpawnLocation" type="PathFollow2D" parent="LeftSchoolPath"]
position = Vector2( -359.626, 0 )
rotate = false

[node name="StartTimer" type="Timer" parent="."]
autostart = true

[node name="RightSchoolPath" type="Path2D" parent="."]
curve = SubResource( 6 )

[node name="SchoolSpawnLocation" type="PathFollow2D" parent="RightSchoolPath"]
position = Vector2( 2056, 16 )
rotate = false

[node name="UI" type="Control" parent="."]
margin_right = 1416.0
margin_bottom = 1216.0
theme = SubResource( 7 )

[node name="Control" parent="UI" instance=ExtResource( 1 )]
margin_left = 465.0
margin_top = 646.0
margin_right = -896.0
margin_bottom = -550.0

[node name="Welcome" type="Container" parent="UI"]
margin_left = 265.0
margin_top = 162.0
margin_right = 988.0
margin_bottom = 305.0

[node name="Label3" type="Label" parent="UI/Welcome"]
margin_left = 25.0
margin_top = -2.0
margin_right = 461.0
margin_bottom = 44.0
text = "Welcome to my website!"

[node name="Label" type="Label" parent="UI/Welcome"]
margin_left = -136.0
margin_top = 40.0
margin_right = 237.0
margin_bottom = 61.0
text = "Press and hold anywhere on the page to swim"

[node name="seaweed_dark" parent="." instance=ExtResource( 7 )]
modulate = Color( 0.0235294, 0.678431, 0.278431, 1 )
position = Vector2( 588, 211 )
rotation = -0.374787
scale = Vector2( 1.0488, 1.88528 )

[node name="seaweed_dark2" parent="." instance=ExtResource( 7 )]
modulate = Color( 0.0235294, 0.678431, 0.278431, 1 )
position = Vector2( 596, 613 )
rotation = -0.374787
scale = Vector2( 1.0488, 1.88528 )

[node name="seaweed_light" parent="." instance=ExtResource( 7 )]
modulate = Color( 0.0392157, 0.760784, 0.607843, 1 )
position = Vector2( 577, 469 )
rotation = -0.374787
scale = Vector2( 1.0488, 1.88528 )

[node name="seaweed_light2" parent="." instance=ExtResource( 7 )]
modulate = Color( 0.0392157, 0.760784, 0.607843, 1 )
position = Vector2( 716, 566 )
rotation = -0.374787
scale = Vector2( 1.0488, 1.88528 )

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
